force-app/main/default/objects/Apttus_Approval__ApprovalRuleEntry__c/fields/Apttus_Approval__ApprovalRuleId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__ApprovalRuleId__c</fullName>
    <description>ID of the associated rule</description>
    <label>Approval Rule</label>
    <referenceTo>Apttus_Approval__ApprovalRule__c</referenceTo>
    <relationshipLabel>Entries</relationshipLabel>
    <relationshipName>ApprovalRuleEntries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>