force-app/main/default/objects/Apttus_Approval__ApprovalRuleEntry__c/fields/Apttus_Approval__DependsOn__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__DependsOn__c</fullName>
    <description>List of rule entry sequences which must be completed before this rule entry</description>
    <label>Depends On</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>