force-app/main/default/objects/Apttus_Approval__ApprovalRuleEntry__c/fields/Apttus_Approval__Dimension2Value__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Dimension2Value__c</fullName>
    <description>The value for the second dimension. Only applicable to Matrix based rules.</description>
    <label>Dimension 2 Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>